deploy/app_deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: easypay-service
  namespace: easypay
spec:
  selector:
    app: easypay
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30050
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easypay-app
  namespace: easypay
  labels:
      app: easypay
      role: frontend
spec:
  selector:
    matchLabels:
      app: easypay
      role: frontend
  template:
    metadata:
      labels:
        app: easypay
        role: frontend
    spec:
      # initContainers:
      #   - image: busybox:1.28
      #     name: wait-db
      #     env:
      #       - name: DB_HOST
      #         valueFrom:
      #           configMapKeyRef:
      #             name: easypay-config
      #             key: DB_HOST
      #     command:
      #       - sh
      #       - -c
      #       - |
      #         until nslookup ${DB_HOST};
      #         do
      #           echo waiting for ${DB_HOST};
      #           sleep 3;
      #         done
      containers:
        - name: easypay
          image: "983162875680.dkr.ecr.us-east-1.amazonaws.com/easypay-repo:latest"
          imagePullPolicy: Always
          imagePullSecrets:
            - regcred
          ports:
            - name: http
              containerPort: 30050
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
